--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -8,6 +8,9 @@
   </head>
   <body>
     <div id="root"></div>
+    <audio id="bg" loop autoplay>
+      <source src="/bg.mp3" type="audio/mpeg" />
+    </audio>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
